2008-08-11  Benjamin Mack  <benni@typo3.org>

	* Fixed #8259: Cleanup: Call to t3lib_div::devLog() without key (Thanks to Francois Suter)

2008-08-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8996: htmlArea RTE: link to file not updated when changing case in file name

2008-08-11  Ingo Renner  <ingo@typo3.org>

	* Reverted Change from 2008-08-06 in t3lib_div leading to nonfunctional clipboard

2008-08-07  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #1897: Basic Configuration uses different scheme to write im_path to localconf.php

2008-08-06  Ingo Renner  <ingo@typo3.org>

	* Fixed bug: PHP 5.3 throws a warning in class.t3lib_befunc.php on line 3348: trim() expects parameter 1 to be string, array given
	* Fixed bug: PHP 5.3 throws a deprecation warning in typo3/mod/tools/em/class.em_soap.php on lines 108, 112, 115, 213, 218: Assigning the return value of new by reference is deprecated
	* Fixed bug: PHP 5.3 throws a warning in class.t3lib_div.php on line 3286: strcmp() expects parameter 1 to be string, array given

2008-08-05  Dmitry Dulepov  <dmitry@typo3.org>

    * Fixed bug #6992: t3ib_refindex requires t3lib_BEfunc but does not include it
	* Fixed bug #8255: Problems with PHP mail function on Windows

2008-08-01  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9099: Wrong path to pages.gif in linkbrowser (Thanks to Xander Damen)

2008-07-31  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #2661: stdWrap filelist doesn't work directly in fileadmin/

2008-07-30  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8948: phpDoc @internal hides public functions of t3lib_div in Eclipse
	* Fixed bug #9076: iso-ir-109 detected as iso-8859-2 instead of iso-8859-3
	* Fixed bug #5387: Creation of multiple folders in filelist module results in blank page (thanx to Christian Kuhn and Christopher Hlubek)

2008-07-25  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9027: CSH was obsolete at the page-bottom in Web->Info (Thanks to Stefano Kowalke)
