@@ -28,7 +28,7 @@ enableInlineElements = 0
   # cat=basic/enable/140; type=boolean; label=Enable links accessibility icons: If set, accessibility icons will be added in front of links.
 enableAccessibilityIcons = 0
 
-  # cat=basic/enable/130; type=boolean; label=Enable the DAM media browser: If set and if the DAM extension is installed, the DAM media browser will be used by the Insert image dialog.
+  # cat=basic/enable/130; type=boolean; label=Enable the DAM media browser: If set and if the DAM extension is installed, the DAM media browser will be used. DEPRECATED for DAM 1.1+. Use DAM EM setting instead.
 enableDAMBrowser = 0
 
   # cat=basic/enable/120; type=boolean; label=Enable click-enlarge on images: If set, a click-enlarge property may be set on images inserted in the RTE.
