@@ -5,6 +5,7 @@
 2008-08-11  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #8996: htmlArea RTE: link to file not updated when changing case in file name
+	* Added feature #9157: htmlArea RTE EM setting for DAM becomes deprecated with DAM 1.1+
 
 2008-08-11  Ingo Renner  <ingo@typo3.org>
 
